# HardenedMalloc

./: CMakeLists.txt  LICENSE  Readme.md
include/: central_cache.h  common.h  os_mem.h  quarantine.h  slab.h  thread_cache.h
src/: allocator.cpp  central_cache.cpp  main.cpp  os_mem.cpp
